--- a/templates/admin_panel/index.html.twig
+++ b/templates/admin_panel/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="admin-panel-container">
         <div class="admin-panel-menu">
-             <div class="admin-panel-menu-element"  onclick="window.location.href='{{path('app_users')}}'">
+             <div class="admin-panel-menu-element"  onclick="window.location.href='{{path('users')}}'">
                 <img src="/icons/user-manage.svg" alt="user-manage">
                 <h3>Users</h3>
             </div>
