feat: categories management and search bar on home page

--- a/templates/admin_panel_base.html.twig
+++ b/templates/admin_panel_base.html.twig
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="navbar-item">
-                        <button class="sliding-button" onclick="window.location.href='{{path('app_categories')}}'">
+                        <button class="sliding-button" onclick="window.location.href='{{path('categories')}}'">
                                 <div class="sliding-button-sign"><img class="icon" src="/icons/learning.svg" alt="categories-manage"></div>
                                 <div class="sliding-button-text">Categories</div>
                         </button>
