--- a/templates/admin_panel/index.html.twig
+++ b/templates/admin_panel/index.html.twig
@@ -15,7 +15,7 @@
                 <h3>Statistics</h3>
             </div>
 
-            <div class="admin-panel-menu-element" onclick="window.location.href='{{path('app_categories')}}'">
+            <div class="admin-panel-menu-element" onclick="window.location.href='{{path('categories')}}'">
                 <img src="/icons/categories.svg" alt="categories-manage">
                 <h3>Categories</h3>
             </div>
