--- a/templates/categories/_create.html.twig
+++ b/templates/categories/_create.html.twig
@@ -1,12 +1,12 @@
 <h1>Create category</h1>
 
-{{ form_start(form) }}
-
-    {{ form_widget(form) }}
+{{ form_start(create_category_form, { 'action': path('create_category') })}}
+    <input type="hidden" name="parent_id" value="">
+    {{ form_widget(create_category_form) }}
         <button    
             type="submit"
             class="uppercase mt-15 bg-blue-500 text-gray-100 text-lg font-extrabold py-4 px-8 rounded-3xl">
             Submit Post
         </button>
 
-{{ form_end(form) }}
+{{ form_end(create_category_form) }}
